fix: button group contrast issues in dark theme

--- a/src/components/ButtonGroup/button-group.module.scss
+++ b/src/components/ButtonGroup/button-group.module.scss
@@ -28,15 +28,15 @@
         }
 
         &:hover {
-            background-color: var(--primary-dark) !important;
+            background-color: var(--primary-light) !important;
             color: var(--contrast-bg) !important;
         }
 
         &[aria-selected="true"] {
             border-radius: var(--radius-lg);
-            border-color: var(--primary-dark);
+            border-color: var(--primary-light);
             background-color: var(--primary-translucent);
-            color: var(--primary-dark);
+            color: var(--primary-light);
             font-weight: bold;
         }
     }
